Update HTML layout to show result and confidence bar correctly

--- a/templates/index.html
+++ b/templates/index.html
@@ -138,8 +138,7 @@
 
         {% if prediction %}
             <div class="result-box">
-                <h2>Prediction: {{ prediction }}</h2>
-                <h3>Confidence: {{ confidence }}%</h3>
+                <h2>{{ result }}</h2>
                 <div class="confidence-bar" style="width: {{ confidence }}%;"></div>
             </div>
         {% endif %}
